# algorithms-containers

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  defines.hpp  iterator.hpp  main.cpp
containers/: s21_containers.h
containers/queue/: queue.hpp
containers/stack/: stack.hpp
containers/tests/: tests.cpp  tests.hpp
containers/trees/: AVLNode.hpp  AVLTree.hpp  BSTree.hpp  ITree.hpp  TreeNode.hpp
containers/utils/: defines.hpp
containers/vector/: iterator.hpp  vector.hpp
include/: AVLNode.hpp  AVLTree.hpp  BSTree.hpp  ITree.hpp  TreeNode.hpp  array.hpp  defines.hpp  iterator.hpp  nodes.hpp  set.hpp  traits.hpp  trees.hpp  type_traits.hpp  undordred_map.hpp  vector.hpp
tests/: CMakeLists.txt  tests.cpp  tests.hpp
